--- a/hw12/q1.css
+++ b/hw12/q1.css
@@ -1,51 +1,28 @@
-* {
-    box-sizing: border-box;
-}
-
-.column {
-    float: left;
-    padding: 10px;
-}
-
-.left {
-    width: 25%;
-    height: 90vh;
-    background-color: cornflowerblue;
-    padding-left: 3%;
-    color: white;
-}
-
-.right {
-    width: 75%;
-    height: 90vh;
+#page {
     background-color: #b8daff;
-    padding: 10% 10% 5%;
-
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    padding: 50px;
 }
 
 h1 {
-    font-size: 2.2vw;
+    font-size: xx-large;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 h2 {
-    font-size: 2.2vw;
+    font-size: xx-large;
     font-family: 'Ubuntu', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
 }
 
 p {
-    font-size: 1.5vw;
+    font-size: 20px;
 }
 
 img {
-    width: 90%;
+    max-width: 100%;
     height: auto;
     align-items: center;
 }
@@ -62,7 +39,7 @@ span {
     padding: 10px 10px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.2vw;
+    font-size: 16px;
     float: right;
 }
 
@@ -71,9 +48,9 @@ span {
 }
 
 a {
-    padding-left: 5px;
-    font-size: 3vw;
-    width: 30px;
+    padding-left: 3px;
+    font-size: 20px;
+    width: 0;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
@@ -83,9 +60,70 @@ a {
 h3 {
     padding-top: 10px;
     font-family: "Segoe UI", Arial, sans-serif;
-    font-size: 1.3vw;
+    font-size: 18px;
 }
 
-pre {
-    font-size: 1vw;
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: cornflowerblue;
+    overflow-x: hidden;
+    transition: 0.5s;
+
+    padding-top: 40px;
+}
+
+.sidebar a {
+    padding: 5px 5px;
+
+    font-size: 19px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar a:hover {
+    color: darkgray;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 5px;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+}
+
+.openbtn:hover {
+    background-color: #444;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 5px;
+    height: 100%;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidebar {
+        padding-top: 15px;
+    }
+
+    .sidebar a {
+        font-size: 18px;
+    }
 }
