--- a/django/task9/templates/cashier_profile.html
+++ b/django/task9/templates/cashier_profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>profile</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <table class="table table-bordered text-center">
